--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,16 +66,12 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$rootProject.glide"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glide"
 
-    //KOIN
-    implementation "org.koin:koin-android:$rootProject.koin"
-    implementation "org.koin:koin-androidx-scope:$rootProject.koin"
-    implementation "org.koin:koin-android-viewmodel:$rootProject.koin"
-
     //CHUNCK
-    debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
-    releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
+    debugImplementation "com.readystatesoftware.chuck:library:$rootProject.chuck"
+    releaseImplementation "com.readystatesoftware.chuck:library-no-op:$rootProject.chuck"
 
 
     //MULTIDEX
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation "androidx.multidex:multidex:$rootProject.multidex"
+
 }
